--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "electron ."
+  },
   "devDependencies": {
-    "electron": "^20.1.1"
+    "electron": "^20.1.1",
+    "prettier": "^2.7.1"
   }
 }
